# comporator

./: .gitignore  LICENSE  README.md  comporator.py  pyproject.toml
examples/: benchmark.py  datacompy_example.py
tests/: test_comporator.py
