[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "comporator"
version = "0.1.0"
description = "A library for comparing SQL tables and reporting matches/mismatches"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["sql", "comparison", "database", "testing", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
postgres  = ["psycopg2-binary>=2.9"]
mysql     = ["pymysql>=1.1"]
dev       = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "sqlalchemy[mypy]>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["comporator*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=comporator --cov-report=term-missing"
